Modify Doom config

--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -1,4 +1,5 @@
 #+title: config
+#+author: egomezbpedro
 
 * Config
 ** User Data
@@ -46,14 +47,15 @@ accept. For example:
 
 #+begin_src emacs-lisp :tangle yes
 (setq doom-theme 'doom-one)
+(require 'pretty-mode)
+(global-pretty-mode t)
 (setq +org-pretty-mode 1)
 #+end_src
 
 *** Frame transparency
-Set window transparency
 #+begin_src emacs-lisp :tangle yes
 ;;(doom/set-frame-opacity 95)
-(add-to-list 'default-frame-alist '(alpha-background . 90))
+(add-to-list 'default-frame-alist '(alpha-background . 40))
 #+end_src
 
 *** Relative numbers
@@ -66,11 +68,13 @@ numbers are disable. For relative line numbers, set this to `relative'.
 *** Editor
 #+begin_src emacs-lisp :tangle yes
 (setq lsp-auto-guess-root t)
-
+(setq lsp-pyls-server-command "/home/gpedro/.local/bin/pylsp")
 #+end_src
 ** Org
+
 *** General
-Build src blocks
+
+Tangle mapping
 #+begin_src emacs-lisp :tangle yes
 (map! :leader
       :desc "org-babel-tangle" "m B" #'org-babel-tangle)
@@ -85,6 +89,7 @@ Set main org location
    ))
 #+end_src
 
+Shorten links
 #+begin_src emacs-lisp :tangle yes
 (after! org
   (setq
@@ -94,107 +99,60 @@ Set main org location
      )))
 #+end_src
 
-*** Ligatures
+*** Pretty
+
 #+begin_src emacs-lisp :tangle yes
-(global-prettify-symbols-mode 1)
+(require 'org-bullets)
+(add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
+(after! org
+  (setq org-ellipsis " ↩ ")
+  ;;(setq org-superstar-itembullet-alist '((?+ . ?➤) (?- . ?✦))) ; changes +/- symbols in item lists
+  )
+#+end_src
+
+**** Ligatures
+
+#+begin_src emacs-lisp :tangle yes
+(setq prettify-symbols-mode 1)
 (setq prettify-symbols-unprettify-at-point t)
-(use-package org-pretty-tags
-  :demand t
-  :config
-  (setq org-pretty-tags-surrogate-strings
-        (quote
-         (("TODO" . "  ")
-        ("WAIT" . "  ")
-        ("CANCELLED" . " 󰜺 ")
-        ("DONE" . " ")
-        ("[#A]" . " ")
-        ("[#B]" . " ")
-        ("[#C]" . " ")
-        ("[ ]" . " ")
-        ("[X]" . " ")
-        ("[-]" . " ")
-        ("#+BEGIN_SRC" . " ")
-        ("#+END_SRC" . "―")
-        (":PROPERTIES:" . " ")
-        (":END:" . "―")
-        ("#+STARTUP:" . " ")
-        ("#+TITLE: " . "")
-        ("#+RESULTS:" . " ")
-        ("#+NAME:" . " ")
-        ("#+ROAM_TAGS:" . " ")
-        ("#+FILETAGS:" . " ")
-        ("#+HTML_HEAD:" . " ")
-        ("#+SUBTITLE:" . " ")
-        ("#+AUTHOR:" . " ")
-        (":Effort:" . " ")
-        ("SCHEDULED:" . " ")
-        ("DEADLINE:" . " ")))
-          )
-  (org-pretty-tags-global-mode))
+(setq prettify-symbols-alist '(
+                               ("#+begin_src" . "󰩀")
+                               ("#+end_src" . "󰨿")
+                               ("[ ]" . " ")
+                               ("[X]" . " ")
+                               ("[-]" . " ")))
+
+(add-hook 'org-hook-mode 'prettify-symbols-alist)
 
 (use-package org-fancy-priorities
   :ensure t
   :hook
   (org-mode . org-fancy-priorities-mode)
   :config
-  (setq org-fancy-priorities-list '("⚠" "⬆" "⬇" "🛏")))
+  (setq org-fancy-priorities-list '(" " "⬆" "⬇" "☕")))
 
-;;(setq-default org-tex-prettify-list
-;;      '(
-;;        ("TODO" . "  ")
-;;        ("WAIT" . "  ")
-;;        ("CANCELLED" . " 󰜺 ")
-;;        ("DONE" . " ")
-;;        ("[#A]" . " ")
-;;        ("[#B]" . " ")
-;;        ("[#C]" . " ")
-;;        ("[ ]" . " ")
-;;        ("[X]" . " ")
-;;        ("[-]" . " ")
-;;        ("#+BEGIN_SRC" . " ")
-;;        ("#+END_SRC" . "―")
-;;        (":PROPERTIES:" . " ")
-;;        (":END:" . "―")
-;;        ("#+STARTUP:" . " ")
-;;        ("#+TITLE: " . "")
-;;        ("#+RESULTS:" . " ")
-;;        ("#+NAME:" . " ")
-;;        ("#+ROAM_TAGS:" . " ")
-;;        ("#+FILETAGS:" . " ")
-;;        ("#+HTML_HEAD:" . " ")
-;;        ("#+SUBTITLE:" . " ")
-;;        ("#+AUTHOR:" . " ")
-;;        (":Effort:" . " ")
-;;        ("SCHEDULED:" . " ")
-;;        ("DEADLINE:" . " ")))
-;;(add-hook 'org-hook-mode 'org-text-prettify-list)
-#+end_src
-*** Pretty
-#+begin_src emacs-lisp :tangle yes
-(after! org
-  (setq org-ellipsis " ↩ ")
-  (setq org-superstar-headline-bullets-list '("◉" "●" "○" "◆" "●" "○" "◆"))
-  (setq org-superstar-itembullet-alist '((?+ . ?➤) (?- . ?✦))) ; changes +/- symbols in item lists
-  )
+(setq
+ org-priority-faces
+ '((?A :foreground "#ff6c6b" :weight bold)
+   (?B :foreground "#98be65" :weight bold)
+   (?C :foreground "#c678dd" :weight bold))
+ )
+(add-hook 'org-hook-mode 'org-fancy-priorities)
 #+end_src
 
-*** Agenda
+#+RESULTS:
+| prettify-symbols-alist | org-fancy-priorities |
+
+*** Org Agenda
 
 #+begin_src emacs-lisp :tangle yes
 (after! org
   (setq org-agenda-files '("~/org/agenda.org"
                            "~/org/notes.org"
-                           "~/.doom.d/config.org"))
-  (setq
-   org-priority-faces
-   '((?A :foreground "#ff6c6b" :weight bold)
-     (?B :foreground "#98be65" :weight bold)
-     (?C :foreground "#c678dd" :weight bold))
-   )
-  )
+                           "~/.doom.d/config.org")))
 #+end_src
 
-*** Tasks
+*** TODO's and Tasks
 TODO's config
 #+begin_src emacs-lisp :tangle yes
 (after! org
@@ -204,12 +162,12 @@ TODO's config
    '(
      (sequence
       "TODO(t)"            ; A task that is pending TO DO
+      "WAIT(p)"
+      "STARTED(s)"
       "|"                  ; Separete active and unactive tasks
       "DONE(d)"            ; A task that has been complete
       "CANCELLED(c)"       ; A task thast was cancelle
-      ))
-
-   ))
+      ))))
 #+end_src
 
 ** Load package help
