--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -11,6 +11,10 @@ clients, file templates and snippets. It is optional.
 ;;$DOOMDIR/config.el
 (setq user-full-name "Pedro Gomez"
       user-mail-address "pedroenrique.gomezb@gmail.com")
+(setq mac-option-key-is-meta nil
+      mac-command-key-is-meta t
+      mac-command-modifier 'meta
+      mac-option-modifier 'none)
 #+end_src
 
 ** Fonts
@@ -46,7 +50,7 @@ accept. For example:
  `load-theme' function. This is the default:
 
 #+begin_src emacs-lisp :tangle yes
-(setq doom-theme 'doom-one)
+(setq doom-theme 'doom-gruvbox)
 (require 'pretty-mode)
 (global-pretty-mode t)
 (setq +org-pretty-mode 1)
@@ -54,7 +58,7 @@ accept. For example:
 
 *** Frame transparency
 #+begin_src emacs-lisp :tangle yes
-;;(doom/set-frame-opacity 95)
+(doom/set-frame-opacity 95)
 (add-to-list 'default-frame-alist '(alpha-background . 40))
 #+end_src
 
